# openfoam-cloud

./: .gitignore  README.md  download.ipynb  pyproject.toml  tutorial.ipynb
openfoamcloud/providers/: provider_interface.py
openfoamcloud/providers/google/: google_provider.py
openfoamcloud/providers/google/upload_files/docker_files/: openfoam11-dockerfile  openfoam5-dockerfile
openfoamcloud/scripts/: fill_file.py
openfoamcloud/structures/: case.py  parameter_study.py  project.py
